Publish dist packages

--- a/configs/blob-arena/config.json
+++ b/configs/blob-arena/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#980f06"
     },
-    "cover": "/whitelabel/blob-arena/cover.png",
-    "icon": "/whitelabel/blob-arena/icon.png",
+    "cover": "cover.png",
+    "icon": "icon.png",
     "name": "Blob Arena"
   }
 }
