--- a/configs/eternum/config.json
+++ b/configs/eternum/config.json
@@ -395,8 +395,8 @@
   },
   "theme": {
     "name": "Eternum",
-    "icon": "/whitelabel/eternum/icon.svg",
-    "cover": "/whitelabel/eternum/cover.png",
+    "icon": "icon.svg",
+    "cover": "cover.png",
     "colors": {
       "primary": "#dc8b07"
     }
