--- a/configs/tale-weaver/config.json
+++ b/configs/tale-weaver/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#fce377"
     },
-    "cover": "/whitelabel/tale-weaver/cover.png",
-    "icon": "/whitelabel/tale-weaver/icon.png",
+    "cover": "cover.png",
+    "icon": "icon.png",
     "name": "Tale Weaver"
   }
 }
