--- a/configs/flippyflop/config.json
+++ b/configs/flippyflop/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#F38332"
     },
-    "cover": "/whitelabel/flippyflop/cover.png",
-    "icon": "/whitelabel/flippyflop/icon.png",
+    "cover": "cover.png",
+    "icon": "icon.png",
     "name": "FlippyFlop"
   }
 }
