--- a/configs/jokers-of-neon/config.json
+++ b/configs/jokers-of-neon/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#A144B2"
     },
-    "cover": "/whitelabel/jokers-of-neon/cover.png",
-    "icon": "/whitelabel/jokers-of-neon/icon.png",
+    "cover": "cover.png",
+    "icon": "icon.png",
     "name": "Jokers of Neon"
   }
 }
