--- a/configs/realm-of-ra/config.json
+++ b/configs/realm-of-ra/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#de9534"
     },
-    "cover": "/whitelabel/realm-of-ra/cover.png",
-    "icon": "/whitelabel/realm-of-ra/icon.png",
+    "cover": "cover.png",
+    "icon": "icon.png",
     "name": "Realm of Ra"
   }
 }
