--- a/configs/zkastle/config.json
+++ b/configs/zkastle/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#E50D2C"
     },
-    "cover": "/whitelabel/zkastle/cover.png",
-    "icon": "/whitelabel/zkastle/icon.svg",
+    "cover": "cover.png",
+    "icon": "icon.svg",
     "name": "zKastle"
   }
 }
