--- a/configs/zktt/config.json
+++ b/configs/zktt/config.json
@@ -4,8 +4,8 @@
     "colors": {
       "primary": "#FFFFFF"
     },
-    "cover": "/whitelabel/zktt/cover.png",
-    "icon": "/whitelabel/zktt/icon.png",
+    "cover": "cover.png",
+    "icon": "icon.png",
     "name": "zKTT"
   }
 }
