--- a/configs/eternum/config.json
+++ b/configs/eternum/config.json
@@ -420,7 +420,7 @@
             }
           ]
         },
-        "primaryType": "eternum-Message",
+        "primaryType": "s0_eternum-Message",
         "domain": {
           "name": "Eternum",
           "version": "1",
