--- a/configs/eternum/config.json
+++ b/configs/eternum/config.json
@@ -397,7 +397,7 @@
               "type": "shortstring"
             }
           ],
-          "eternum-Message": [
+          "s0_eternum-Message": [
             {
               "name": "identity",
               "type": "ContractAddress"
