--- a/configs/dragark/config.json
+++ b/configs/dragark/config.json
@@ -2,7 +2,7 @@
     "origin": "https://dragark.net",
     "theme": {
         "colors": {
-            "primary": "#ED1138"
+            "primary": "#71EB34"
         },
         "cover": "cover.png",
         "icon": "icon.png",
