--- a/configs/blob-arena/config.json
+++ b/configs/blob-arena/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://www.blobarena.xyz",
+  "origin": "blobarena.xyz",
   "theme": {
     "colors": {
       "primary": "#980f06"
