--- a/configs/dark-shuffle/config.json
+++ b/configs/dark-shuffle/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://darkshuffle.dev",
+  "origin": "darkshuffle.dev",
   "theme": {
     "colors": {
       "primary": "#F59100"
