--- a/configs/dragark/config.json
+++ b/configs/dragark/config.json
@@ -1,5 +1,5 @@
 {
-    "origin": "https://dragark.net",
+    "origin": "dragark.net",
     "theme": {
         "colors": {
             "primary": "#71EB34"
