--- a/configs/jokers-of-neon/config.json
+++ b/configs/jokers-of-neon/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://jokersofneon.com",
+  "origin": "jokersofneon.com",
   "theme": {
     "colors": {
       "primary": "#A144B2"
