--- a/configs/pistols/config.json
+++ b/configs/pistols/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://pistols.underware.gg",
+  "origin": "pistols.underware.gg",
   "theme": {
     "colors": {
       "primary": "#EF9758"
