--- a/configs/pixelaw/config.json
+++ b/configs/pixelaw/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://dojo.pixelaw.xyz",
+  "origin": "dojo.pixelaw.xyz",
   "theme": {
     "colors": {
       "primary": "#7C00B1",
