--- a/configs/realm-of-ra/config.json
+++ b/configs/realm-of-ra/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://mancala.realmofra.com",
+  "origin": "mancala.realmofra.com",
   "theme": {
     "colors": {
       "primary": "#de9534"
