--- a/configs/zkastle/config.json
+++ b/configs/zkastle/config.json
@@ -1,5 +1,5 @@
 {
-  "origin": "https://zkastle.vercel.app",
+  "origin": "zkastle.vercel.app",
   "theme": {
     "colors": {
       "primary": "#E50D2C"
