Fix nums origin

--- a/configs/nums/config.json
+++ b/configs/nums/config.json
@@ -1,5 +1,8 @@
 {
-  "origin": "nums.gg",
+  "origin": [
+    "nums.gg",
+    "www.nums.gg"
+  ],
   "theme": {
     "colors": {
       "primary": "#9E84E9"
