--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build:configs": "tsx scripts/generate-configs.ts && prettier --write src/generated/controller-configs.ts",
     "build": "pnpm build:configs && tsup --dts-resolve",
+    "build:js": "pnpm build:configs && tsup --no-dts",
     "fetch:erc20": "tsx scripts/fetch-erc20.ts && prettier --write src/generated/erc20-metadata.ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\""
