--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,13 +40,7 @@ jobs:
 
       - uses: "google-github-actions/upload-cloud-storage@v2"
         with:
-          path: "configs"
-          destination: "c7e-prod-static/presets"
-          parent: false
-
-      - uses: "google-github-actions/upload-cloud-storage@v2"
-        with:
-          path: "optimized-images"
+          path: "built-configs"
           destination: "c7e-prod-static/presets"
           parent: false
 
