--- a/configs/blob-arena/config.json
+++ b/configs/blob-arena/config.json
@@ -1,5 +1,8 @@
 {
-  "origin": "blobarena.xyz",
+  "origin": [
+    "www.blobarena.xyz",
+    "blobarena.xyz"
+  ],
   "theme": {
     "colors": {
       "primary": "#980f06"
