change color theme

--- a/configs/metal-slug/config.json
+++ b/configs/metal-slug/config.json
@@ -36,7 +36,7 @@
     },
     "theme": {
         "colors": {
-            "primary": "#F33022"
+            "primary": "#C00F0C"
         },
         "cover": "cover.png",
         "icon": "icon.png",
