--- a/configs/ponziland/config.json
+++ b/configs/ponziland/config.json
@@ -7,7 +7,7 @@
       "primary": "#F38332"
     },
     "cover": "cover.png",
-    "icon": "icon.png",
+    "icon": "icon.svg",
     "name": "PonziLand"
   },
   "chains": {
