--- a/configs/blob-arena/config.json
+++ b/configs/blob-arena/config.json
@@ -1,6 +1,8 @@
 {
   "origin": [
-    "*.blobarena.xyz"
+    "*.blobarena.xyz",
+    "blobarena.xyz",
+    "development.blobarena.xyz"
   ],
   "theme": {
     "colors": {
