--- a/configs/dragark/config.json
+++ b/configs/dragark/config.json
@@ -1,5 +1,8 @@
 {
-    "origin": "dragark.net",
+    "origin": [
+        "*.dragark.net",
+        "dragark.net"
+    ],
     "chains": {
         "SN_MAIN": {
             "policies": {
