feat: update preset

--- a/configs/chaos-surfer/config.json
+++ b/configs/chaos-surfer/config.json
@@ -8,7 +8,7 @@
     },
     "cover": "cover.png",
     "icon": "icon.png",
-    "name": "Chaos Surfer"
+    "name": "Chaos Surfers"
   },
   "chains": {
     "WP_POPULARIUMDEMO_GAME": {
