--- a/configs/arcade/config.json
+++ b/configs/arcade/config.json
@@ -2,7 +2,11 @@
   "origin": "*cartridge.gg",
   "theme": {
     "name": "Arcade",
-    "icon": "icon.svg"
+    "icon": "icon.svg",
+    "cover": {
+      "light": "cover-light.png",
+      "dark": "cover-dark.png"
+    }
   },
   "chains": {
     "SN_MAIN": {
