remove unused, add others

--- a/configs/eternum/config.json
+++ b/configs/eternum/config.json
@@ -89,22 +89,27 @@
               {
                 "name": "Contribute to Construction",
                 "description": "Contribute resources to hyperstructure construction",
-                "entrypoint": "contribute_to_construction"
+                "entrypoint": "contribute"
               },
               {
-                "name": "Set Co-Owners",
-                "description": "Set the co-owners of the hyperstructure",
-                "entrypoint": "set_co_owners"
+                "name": "Update Construction Access",
+                "description": "Update access permissions for hyperstructure construction",
+                "entrypoint": "update_construction_access"
               },
               {
-                "name": "End Game",
-                "description": "Terminates the current game season once you've reached enough points",
-                "entrypoint": "end_game"
+                "name": "Allocate Shares",
+                "description": "Allocate shares of the hyperstructure",
+                "entrypoint": "allocate_shares"
               },
               {
-                "name": "Set Access",
-                "description": "Configure access permissions for contributions to the hyperstructure",
-                "entrypoint": "set_access"
+                "name": "Claim Construction Points",
+                "description": "Claim construction points from the hyperstructure",
+                "entrypoint": "claim_construction_points"
+              },
+              {
+                "name": "Claim Share Points",
+                "description": "Claim share points from the hyperstructure",
+                "entrypoint": "claim_share_points"
               }
             ]
           },
@@ -243,6 +248,11 @@
                 "entrypoint": "structure_troop_adjacent_transfer"
               },
               {
+                "name": "Transfer resources",
+                "description": "Transfer resources between guards",
+                "entrypoint": "troop_troop_adjacent_transfer"
+              },
+              {
                 "name": "structure_burn",
                 "entrypoint": "structure_burn"
               },
@@ -262,14 +272,9 @@
             "description": "Manages season-related actions",
             "methods": [
               {
-                "name": "Register to Leaderboard",
-                "description": "Register to the leaderboard",
-                "entrypoint": "register_to_leaderboard"
-              },
-              {
-                "name": "Claim Leaderboard Rewards",
-                "description": "Claim rewards from the leaderboard",
-                "entrypoint": "claim_leaderboard_rewards"
+                "name": "Season Close",
+                "description": "Close the current season",
+                "entrypoint": "season_close"
               }
             ]
           },
