--- a/configs/pistols/config.json
+++ b/configs/pistols/config.json
@@ -40,7 +40,11 @@
               },
               {
                 "entrypoint": "emit_player_social_link",
-                "description": "Link to social platform"
+                "description": "Link player to social platform"
+              },
+              {
+                "entrypoint": "clear_player_social_link",
+                "description": "Unlink player from social platform"
               }
             ]
           },
@@ -187,6 +191,42 @@
                   "type": "shortstring"
                 }
               ],
+              "Message": [
+                {
+                  "name": "purpose",
+                  "type": "string"
+                }
+              ]
+            },
+            "primaryType": "Message",
+            "domain": {
+              "name": "Underware_gg",
+              "version": "1.0.0",
+              "chainId": "SN_MAIN",
+              "revision": "1"
+            },
+            "description": "General purpose authorization message"
+          },
+          {
+            "types": {
+              "StarknetDomain": [
+                {
+                  "name": "name",
+                  "type": "shortstring"
+                },
+                {
+                  "name": "version",
+                  "type": "shortstring"
+                },
+                {
+                  "name": "chainId",
+                  "type": "shortstring"
+                },
+                {
+                  "name": "revision",
+                  "type": "shortstring"
+                }
+              ],
               "pistols-PlayerOnline": [
                 {
                   "name": "identity",
@@ -239,7 +279,11 @@
               },
               {
                 "entrypoint": "emit_player_social_link",
-                "description": "Link to social platform"
+                "description": "Link player to social platform"
+              },
+              {
+                "entrypoint": "clear_player_social_link",
+                "description": "Unlink player from social platform"
               }
             ]
           },
@@ -365,6 +409,42 @@
               "revision": "1"
             },
             "description": "Verify the identity of a player in a Duel"
+          },
+          {
+            "types": {
+              "StarknetDomain": [
+                {
+                  "name": "name",
+                  "type": "shortstring"
+                },
+                {
+                  "name": "version",
+                  "type": "shortstring"
+                },
+                {
+                  "name": "chainId",
+                  "type": "shortstring"
+                },
+                {
+                  "name": "revision",
+                  "type": "shortstring"
+                }
+              ],
+              "Message": [
+                {
+                  "name": "purpose",
+                  "type": "string"
+                }
+              ]
+            },
+            "primaryType": "Message",
+            "domain": {
+              "name": "Underware_gg",
+              "version": "1.0.0",
+              "chainId": "SN_SEPOLIA",
+              "revision": "1"
+            },
+            "description": "General purpose authorization message"
           },
           {
             "types": {
