--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fetch:erc20": "tsx scripts/fetch-erc20.ts && prettier --write src/generated/erc20-metadata.ts",
     "image:optimize": "tsx scripts/optimize-images.ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\""
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "validate:configs": "tsx scripts/validate-configs.ts"
   },
   "exports": {
     ".": "./dist/index.js",
