--- a/configs/slot/config.json
+++ b/configs/slot/config.json
@@ -2,7 +2,6 @@
   "origin": "x.cartridge.gg",
   "theme": {
     "name": "Slot",
-    "icon": "icon.svg",
-    "cover": ""
+    "icon": "icon.svg"
   }
 }
