Remove cartridge / arcade cover image

--- a/configs/cartridge/config.json
+++ b/configs/cartridge/config.json
@@ -2,10 +2,6 @@
   "origin": "*",
   "theme": {
     "name": "Cartridge",
-    "icon": "icon.svg",
-    "cover": {
-      "light": "cover-light.png",
-      "dark": "cover-dark.png"
-    }
+    "icon": "icon.svg"
   }
 }
